--- a/wiki_html/vim/mac_vim.html
+++ b/wiki_html/vim/mac_vim.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link rel="Stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,8 +27,9 @@
         }
       }
     </style>
-    <link rel="Stylesheet" type="text/css" href="../css/bootstrap-responsive.min.css">
-
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
+    <script type="text/javascript"
+        src="http://lib.sinaapp.com/js/jquery/1.9.0/jquery.min.js"></script>
   </head>
 
   <body>
@@ -268,10 +269,9 @@ Powered by [*<strong>Mou</strong>*,The missing *<strong>Markdown</strong>* edito
 
     </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../js/bootstrap.js"></script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        (function(){
+        $(function(){
             // put toc to sidebar.
             var li = $(".toc > ul > li"),
                 sidebar = $('#sidebar');
@@ -286,7 +286,7 @@ Powered by [*<strong>Mou</strong>*,The missing *<strong>Markdown</strong>* edito
             $("a[href^='http://']").each(function(){
               this.target = "_blank";
             });
-        })()
+        });
     </script>
   </body>
 </html>
