modified:   wiki/README.md 	renamed:    wiki/salt/intro.wiki -> wiki/Salt.wiki 	renamed:    wiki/shell_command_line_shortcut.md -> wiki/Shell.wiki 	renamed:    wiki/sublime/package_console.wiki -> wiki/Sublime.wiki 	new file:   wiki/html_css/index.wiki 	modified:   wiki/index.wiki 	new file:   wiki/javascript/index.wiki 	modified:   wiki/javascript/mock.wiki 	new file:   wiki/javascript/pretty.js.wiki 	new file:   wiki/lua/index.wiki 	new file:   wiki/nginx/index.wiki 	new file:   wiki/ngx_lua/index.wiki 	renamed:    wiki/perl1line.txt -> wiki/perl/perl1line.txt 	new file:   wiki/python/index.wiki 	deleted:    wiki/salt/install.wiki 	new file:   wiki/scrum tools.wiki 	deleted:    wiki/scrum_tools.md 	new file:   wiki/sshfs.wiki 	modified:   wiki/templates/default.html 	new file:   wiki/varnish/index.wiki 	new file:   wiki/vim/index.wiki 	deleted:    wiki/vim/mac_vim.wiki 	deleted:    wiki/vim/script.wiki 	renamed:    wiki/virtualbox nat -> wiki/virtualbox/virtualbox nat 	modified:   "wiki/\345\267\245\347\250\213\345\270\210\347\232\204\351\235\236\346\212\200\346\234\257\347\264\240\345\205\273.wiki" 	new file:   "wiki/\350\277\220\347\273\264\345\267\245\347\250\213\345\270\210\347\232\204\345\267\245\345\205\267\351\223\276.wiki" 	renamed:    wiki_html/salt/intro.html -> wiki_html/Salt.html 	new file:   wiki_html/Shell.html 	renamed:    wiki_html/sublime/package_console.html -> wiki_html/Sublime.html 	modified:   wiki_html/css/bootstrap.min.css 	new file:   wiki_html/css/prettify.css 	new file:   wiki_html/html_css/index.html 	new file:   wiki_html/img/glyphicons-halflings.png 	modified:   wiki_html/index.html 	new file:   wiki_html/javascript/index.html 	modified:   wiki_html/javascript/mock.html 	new file:   wiki_html/javascript/pretty.js.html 	modified:   wiki_html/javascript/trainningByWenson.html 	new file:   wiki_html/js/prettify.js 	new file:   wiki_html/lua/index.html 	renamed:    wiki_html/salt/install.html -> wiki_html/nginx/index.html 	new file:   wiki

--- a/wiki_html/Salt.html
+++ b/wiki_html/Salt.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>intro</title>
+    <title>Salt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <!--
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
+    -->
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,7 +32,6 @@
         }
       }
     </style>
-    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     <script type="text/javascript"
         src="http://lib.sinaapp.com/js/jquery/1.9.0/jquery.min.js"></script>
   </head>
@@ -37,12 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Real's Notes</a>
+          <a class="brand" href="index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -54,15 +53,24 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
+        <div class="span3">
           <div class="well sidebar-nav">
             <ul id="sidebar" class="nav nav-list">
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <div class="span6">
             
-<h1 id="toc_1">简介</h1>
+<div class="toc">
+<ul>
+<li><a href="#toc_0.0.1">简介</a>
+<li><a href="#toc_0.0.2">安装</a>
+</ul>
+</ul>
+</ul>
+</div>
+
+<h3 id="toc_0.0.1">简介</h3>
 
 <ul>
 <li>
@@ -155,6 +163,52 @@ Salt可以通过命令行调用，也可以通过api调用，所以Salt不但是
 
 </ul>
 
+<h3 id="toc_0.0.2">安装</h3>
+<p>
+The latest Salt Stack packages are available in a PPA. The steps below demonstrate how to add the PPA and install the Salt Stack packages.
+</p>
+
+<pre>
+sudo apt-get install python-software-properties
+sudo add-apt-repository -y ppa:saltstack/salt
+</pre>
+
+<p>
+Once the repository has been configured you’ll need to refresh your package cache.
+</p>
+
+<p>
+<code>sudo apt-get update</code>
+</p>
+
+<p>
+Now you should be ready to install the Salt Stack packages. Salt Stack is broken up into three different packages: salt-master, salt-minion and salt-syndic.
+</p>
+
+<p>
+Salt Master
+</p>
+
+<p>
+<code>sudo apt-get install salt-master</code>
+</p>
+
+<p>
+Salt Minion
+</p>
+
+<p>
+<code>sudo apt-get install salt-minion</code>
+</p>
+
+<p>
+Salt Syndic
+</p>
+
+<p>
+<code>sudo apt-get install salt-syndic</code>
+</p>
+
         </div><!--/span-->
       </div><!--/row-->
 
@@ -165,9 +219,8 @@ Salt可以通过命令行调用，也可以通过api调用，所以Salt不但是
 
     </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $(function(){
+        (function(){
             // put toc to sidebar.
             var li = $(".toc > ul > li"),
                 sidebar = $('#sidebar');
@@ -179,10 +232,14 @@ Salt可以通过命令行调用，也可以通过api调用，所以Salt不但是
                 $('ul', sidebar).addClass("nav nav-list");
                 $(".toc").remove();
             }
-            $("a[href^='http://']").each(function(){
-              this.target = "_blank";
+            $("a[href^='http']").each(function(){
+              $(this).attr('target', '_blank').append('<i class="icon-share"><i>');
             });
-        });
+            $("table").addClass("table table-bordered");
+        })();
     </script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
+    <script
+        src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
   </body>
 </html>
