--- a/wiki_html/Shell.html
+++ b/wiki_html/Shell.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>%title%</title>
+    <title>Shell</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,8 +12,8 @@
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     -->
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap-responsive.min.css">
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -41,7 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="%root_path%index.html">Real's Notes</a>
+          <a class="brand" href="index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -60,7 +60,74 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span6">
-            %content%
+            
+<h1 id="toc_1">bash命令行快捷键</h1>
+<ul>
+<li>
+Ctrl + d       删除一个字符，相当于通常的Delete键（命令行若无任何字符，则相当于exit；处理多行标准输入时也表示eof）
+
+<li>
+Alt + d      删除从光标位置到当前所处单词的末尾
+
+<li>
+Ctrl + h       退格删除一个字符，相当于通常的Backspace键
+
+<li>
+Ctrl + u       删除光标之前到行首的字符
+
+<li>
+Ctrl + k       删除光标之前到行尾的字符
+
+<li>
+Ctrl + w       删除从光标位置前到当前所处单词（Word）的开头
+
+</ul>
+
+<ul>
+<li>
+Ctrl + y       粘贴最后一次被删除的单词
+
+</ul>
+
+<ul>
+<li>
+Ctrl + a       光标移动到行首（Ahead of line），相当于通常的Home键
+
+<li>
+Ctrl + e       光标移动到行尾（End of line）
+
+<li>
+Ctrl + f       光标向前(Forward)移动一个字符位置
+
+<li>
+Alt + f      光标向前（Forward）移动到下一个单词
+
+<li>
+Ctrl + b       光标往回(Backward)移动一个字符位置
+
+<li>
+Alt + b      光标往回（Backward）移动到前一个单词
+
+</ul>
+
+<ul>
+<li>
+Ctrl + c       取消当前行输入的命令，相当于Ctrl + Break
+
+<li>
+Ctrl + l       清屏，相当于执行clear命令
+
+<li>
+Ctrl + p       调出命令历史中的前一条（Previous）命令，相当于通常的上箭头
+
+<li>
+Ctrl + n       调出命令历史中的下一条（Next）命令，相当于通常的上箭头
+
+<li>
+Ctrl + r       显示：号提示，根据用户输入查找相关历史命令（reverse-i-search）
+
+</ul>
+
         </div><!--/span-->
       </div><!--/row-->
 
