--- a/wiki_html/index.html
+++ b/wiki_html/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>index</title>
+    <title>Real's Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <!--
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
+    -->
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,7 +32,6 @@
         }
       }
     </style>
-    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     <script type="text/javascript"
         src="http://lib.sinaapp.com/js/jquery/1.9.0/jquery.min.js"></script>
   </head>
@@ -37,12 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Real's Notes</a>
+          <a class="brand" href="index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -54,72 +53,94 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
+        <div class="span3">
           <div class="well sidebar-nav">
             <ul id="sidebar" class="nav nav-list">
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <div class="span6">
             
 <div class="toc">
 <ul>
-<li><a href="#toc_1">开发</a>
+<li><a href="#toc_1">Dev</a>
 <ul>
-<li><a href="#toc_1.1">vim</a>
-<li><a href="#toc_1.2">Python</a>
-<li><a href="#toc_1.3">Sublime</a>
+<li><a href="#toc_1.1">Language</a>
+<li><a href="#toc_1.2">Editor</a>
 </ul>
-<li><a href="#toc_2">配置管理</a>
-<ul>
-<li><a href="#toc_2.1">Salt</a>
-</ul>
-<li><a href="#toc_3">Misc</a>
+<li><a href="#toc_2">Ops</a>
+<li><a href="#toc_3">Team</a>
 </ul>
 </div>
 
-<h1 id="toc_1">开发</h1>
-<h2 id="toc_1.1">vim</h2>
-
-<ul>
-<li>
-<a href="http://learnvimscriptthehardway.stevelosh.com">Learn vim script the hard way</a>
-
-<li>
-<a href="http://www.berlinix.com/vim/vim.php">Berlinix</a>
-
-<li>
-<a href="http://wiki.hotoo.me/Vim.html">闲耘的blog</a>
-
-</ul>
-
-<h2 id="toc_1.2">Python</h2>
-<p>
-<a href="http://pyvideo.org/category/33/pycon-us-2013">PyCon US 2013 video</a>
-</p>
-
-<h2 id="toc_1.3">Sublime</h2>
-<p>
-<a href="./sublime/package_console.html">install package manager</a>
-</p>
 
 <hr />
-<h1 id="toc_2">配置管理</h1>
-
-<h2 id="toc_2.1">Salt</h2>
+<h1 id="toc_1">Dev</h1>
+<h2 id="toc_1.1">Language</h2>
 <ul>
 <li>
-<a href="./salt/intro.html">简介</a>
+<a href="./javascript/index.html">Javascript</a>||<a href="./html_css/index.html">HTML/CSS</a>||<a href="http://www.w3schools.com">w3cshools</a>
 
 <li>
-<a href="./salt/install.html">安装</a>
+<a href="./python/index.html">Python</a>
+
+<li>
+<a href="./lua/index.html">Lua</a>
+
+<li>
+<a href="./ngx_lua/index.html">Ngx_lua</a>
+
+<li>
+<a href="http://www.dartlang.org/">Dart</a>
 
 </ul>
 
-<h1 id="toc_3">Misc</h1>
-<p>
-<a href="./工程师的非技术素养.html">工程师的非技术素养</a>
-</p>
+<h2 id="toc_1.2">Editor</h2>
+<ul>
+<li>
+<a href="./vim/index.html">Vim</a>
+
+<li>
+<a href="Sublime.html">Sublime</a>
+
+</ul>
+
+<hr />
+<h1 id="toc_2">Ops</h1>
+<ul>
+<li>
+<a href="运维工程师的工具链.html">运维工程师的工具链</a>
+
+<li>
+<a href="Salt.html">Salt</a>
+
+<li>
+<a href="./nginx/index.html">Nginx</a>
+
+<li>
+<a href="./varnish/index.html">Varnish</a>
+
+<li>
+<a href="sshfs.html">sshfs</a>
+
+<li>
+<a href="shell.html">shell</a>
+
+</ul>
+
+<hr />
+<h1 id="toc_3">Team</h1>
+<ul>
+<li>
+<a href="scrum tools.html">scrum tools</a>
+
+<li>
+<a href="工程师的非技术素养.html">工程师的非技术素养</a>
+
+<li>
+<a href="http://www.infoq.com/cn/presentations/Form-powerful-team\#3970668-tsina-1-57674-4940258fac58681d93622513463cbd0b">建一只强大的小团队 by @左耳朵耗子</a>
+
+</ul>
 
         </div><!--/span-->
       </div><!--/row-->
@@ -131,9 +152,8 @@
 
     </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $(function(){
+        (function(){
             // put toc to sidebar.
             var li = $(".toc > ul > li"),
                 sidebar = $('#sidebar');
@@ -145,10 +165,14 @@
                 $('ul', sidebar).addClass("nav nav-list");
                 $(".toc").remove();
             }
-            $("a[href^='http://']").each(function(){
-              this.target = "_blank";
+            $("a[href^='http']").each(function(){
+              $(this).attr('target', '_blank').append('<i class="icon-share"><i>');
             });
-        });
+            $("table").addClass("table table-bordered");
+        })();
     </script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
+    <script
+        src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
   </body>
 </html>
