--- a/wiki_html/javascript/pretty.js.html
+++ b/wiki_html/javascript/pretty.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>%title%</title>
+    <title>pretty.js</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,8 +12,8 @@
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     -->
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap-responsive.min.css">
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -41,7 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="%root_path%index.html">Real's Notes</a>
+          <a class="brand" href="../index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -60,7 +60,83 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span6">
-            %content%
+            
+<div class="toc">
+<ul>
+<li><a href="#toc_1">Auto load</a>
+<li><a href="#toc_2">Example</a>
+<li><a href="#toc_3">Language list</a>
+</ul>
+</div>
+<p>
+<a href="https://google-code-prettify.googlecode.com/">offical</a>
+</p>
+
+<h1 id="toc_1">Auto load</h1>
+<pre class="prettyprint lang-html">
+&lt;script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"&gt;&lt;/script&gt;
+</pre>
+
+<h1 id="toc_2">Example</h1>
+<pre class="prettyprint lang-html">
+&lt;pre class="prettyprint lang-html linenums"&gt;
+    code...
+&lt;/pre&gt;
+</pre>
+
+<h1 id="toc_3">Language list</h1>
+<pre class="prettyprint lang--">
+lang-aliases
+lang-apollo
+lang-basic
+lang-c
+lang-cc
+lang-cl
+lang-clj
+lang-coffee
+lang-cpp
+lang-cs
+lang-css
+lang-dart
+lang-el
+lang-erlang
+lang-foo
+lang-go
+lang-handler
+lang-hs
+lang-html
+lang-in
+lang-java
+lang-js
+lang-lisp
+lang-llvm
+lang-lsp
+lang-lua
+lang-matlab
+lang-ml
+lang-mumps
+lang-n
+lang-nemerle
+lang-pascal
+lang-proto
+lang-py
+lang-r
+lang-rd
+lang-regex
+lang-scala
+lang-scm
+lang-sh
+lang-sql
+lang-tcl
+lang-tex
+lang-uq
+lang-vb
+lang-vhdl
+lang-wiki
+lang-xq
+lang-yaml
+</pre>
+
         </div><!--/span-->
       </div><!--/row-->
 
