--- a/wiki_html/nginx/index.html
+++ b/wiki_html/nginx/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>package_console</title>
+    <title>nginx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <!--
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
+    -->
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,7 +32,6 @@
         }
       }
     </style>
-    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     <script type="text/javascript"
         src="http://lib.sinaapp.com/js/jquery/1.9.0/jquery.min.js"></script>
   </head>
@@ -37,12 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Real's Notes</a>
+          <a class="brand" href="../index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -54,21 +53,61 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
+        <div class="span3">
           <div class="well sidebar-nav">
             <ul id="sidebar" class="nav nav-list">
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <div class="span6">
             
-<h1 id="toc_1">install package manager</h1>
-<ol>
+<div class="toc">
+<ul>
+<li><a href="#toc_1">常用配置</a>
+<ul>
+<li><a href="#toc_1.1">location</a>
+</ul>
+</ul>
+</div>
+
+<ul>
 <li>
-ctrl+\`
+<a href="http://wiki.nginx.org/Main">Nginx wiki</a>
+
+</ul>
+
+<h1 id="toc_1">常用配置</h1>
+<h2 id="toc_1.1">location</h2>
+<p>
+符号：
+</p>
+<ul>
+<li>
+= 绝对匹配(非正则)
 
 <li>
-import urllib2,os;pf='Package Control.sublime-package';ipp=sublime.installed_packages_path();os.makedirs(ipp) if not os.path.exists(ipp) else None;open(os.path.join(ipp,pf),'wb').write(urllib2.urlopen('<a href="http://sublime.wbond.net/'+pf.replace('">http://sublime.wbond.net/'+pf.replace('</a> ','%20')).read())
+^~ 匹配开头（非正则）
+
+<li>
+~ 大小写敏感的匹配
+
+<li>
+~* 忽略大小写的匹配
+
+</ul>
+
+<p>
+匹配顺序：
+</p>
+<ol>
+<li>
+=
+
+<li>
+^~
+
+<li>
+location在配置文件中的顺序
 
 </ol>
 
@@ -82,9 +121,8 @@ import urllib2,os;pf='Package Control.sublime-package';ipp=sublime.installed_pac
 
     </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $(function(){
+        (function(){
             // put toc to sidebar.
             var li = $(".toc > ul > li"),
                 sidebar = $('#sidebar');
@@ -96,10 +134,14 @@ import urllib2,os;pf='Package Control.sublime-package';ipp=sublime.installed_pac
                 $('ul', sidebar).addClass("nav nav-list");
                 $(".toc").remove();
             }
-            $("a[href^='http://']").each(function(){
-              this.target = "_blank";
+            $("a[href^='http']").each(function(){
+              $(this).attr('target', '_blank').append('<i class="icon-share"><i>');
             });
-        });
+            $("table").addClass("table table-bordered");
+        })();
     </script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
+    <script
+        src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
   </body>
 </html>
