--- a/wiki_html/javascript/index.html
+++ b/wiki_html/javascript/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>%title%</title>
+    <title>index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,8 +12,8 @@
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     -->
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap-responsive.min.css">
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -41,7 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="%root_path%index.html">Real's Notes</a>
+          <a class="brand" href="../index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -60,7 +60,32 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span6">
-            %content%
+            
+<h1 id="toc_1">Modules</h1>
+<ul>
+<li>
+<a href="http://jquery.com">jQuery</a>
+
+<li>
+<a href="https://github.com/caolan/async">async.js</a>
+
+<li>
+<a href="https://github.com/mikeal/request">request</a>
+
+<li>
+<a href="http://backbone.com">backbone</a>
+
+<li>
+<a href="http://underscorejs.org">underscorejs</a>
+
+<li>
+<a href="http://d3js.org">D3</a>
+
+<li>
+<a href="pretty.js.html">pretty.js</a>代码高亮
+
+</ul>
+
         </div><!--/span-->
       </div><!--/row-->
 
