--- a/wiki_html/javascript/trainningByWenson.html
+++ b/wiki_html/javascript/trainningByWenson.html
@@ -8,7 +8,12 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <!--
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
+    -->
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,7 +32,6 @@
         }
       }
     </style>
-    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     <script type="text/javascript"
         src="http://lib.sinaapp.com/js/jquery/1.9.0/jquery.min.js"></script>
   </head>
@@ -37,12 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Real's Notes</a>
+          <a class="brand" href="../index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -54,13 +53,13 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
+        <div class="span3">
           <div class="well sidebar-nav">
             <ul id="sidebar" class="nav nav-list">
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <div class="span6">
             
 <p>
 #type
@@ -295,9 +294,8 @@ TypeError: Cannot call method 'toString' of null
 
     </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $(function(){
+        (function(){
             // put toc to sidebar.
             var li = $(".toc > ul > li"),
                 sidebar = $('#sidebar');
@@ -309,10 +307,14 @@ TypeError: Cannot call method 'toString' of null
                 $('ul', sidebar).addClass("nav nav-list");
                 $(".toc").remove();
             }
-            $("a[href^='http://']").each(function(){
-              this.target = "_blank";
+            $("a[href^='http']").each(function(){
+              $(this).attr('target', '_blank').append('<i class="icon-share"><i>');
             });
-        });
+            $("table").addClass("table table-bordered");
+        })();
     </script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
+    <script
+        src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
   </body>
 </html>
