--- a/wiki_html/scrum tools.html
+++ b/wiki_html/scrum tools.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>%title%</title>
+    <title>scrum tools</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,8 +12,8 @@
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     -->
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap-responsive.min.css">
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -41,7 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="%root_path%index.html">Real's Notes</a>
+          <a class="brand" href="index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -60,7 +60,102 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span6">
-            %content%
+            
+<div class="toc">
+<ul>
+<li><a href="#toc_1">Projects</a>
+<li><a href="#toc_2">Reference</a>
+</ul>
+</div>
+
+<h1 id="toc_1">Projects</h1>
+<ul>
+<li>
+kunagi
+<br />    free &amp; open
+
+</ul>
+
+<ul>
+<li>
+agilo for trac
+<br />  free &amp; open
+
+</ul>
+
+<ul>
+<li>
+ScrumDesk
+<br />  超过5个用户开始收费， 30天免费试用。\(15 per user/month. \)180 per installation.
+
+</ul>
+
+<ul>
+<li>
+tinyPM
+<br />  Free community edition for up to 5 users, unlimited projects.  
+<br />  12,50 EUR/user/month starting from the 6-th user (first 5 are always free).
+<br />  25% renewal discount after 1st year of licensing.
+
+</ul>
+
+<ul>
+<li>
+VisionProject
+<br />  提供online版本，价格根据用户数，功能不同而不同，计算比较复杂。  
+<br />  免费版本只提供给非盈利机构使用。
+
+</ul>
+
+<ul>
+<li>
+Planbox Agile Tool
+<br />  超过2个用户，$4/user/month
+
+</ul>
+
+<ul>
+<li>
+scrumdo.com
+<br />  onlien version: 5.95\(/month(3 users) -- 149.95\)/month(50 users)
+
+</ul>
+
+<ul>
+<li>
+ScrumWorks Basic
+<br />  免费，但是basic不支持拖拽，没有项目管理，没有用户管理。貌似不是很理想。
+
+</ul>
+
+<ul>
+<li>
+<a href="http://kunagi.org/screenshots.html">kunagi</a>
+<br />    java，没有找到比较详细的feature listed
+
+<li>
+<a href="http://www.agilofortrac.com/">agilo for trac</a>
+<br />    python, 社区版本[功能全面](<a href="http://www.agilofortrac.com/en/features/)">http://www.agilofortrac.com/en/features/)</a>
+
+</ul>
+<blockquote>
+<strong>还有很多，但是优秀的scrum工具貌似商业软件居多</strong>
+<strong>感觉上agilo for trac更靠谱，更详细的对比需要实际安装部署</strong>
+</blockquote>
+
+<h1 id="toc_2">Reference</h1>
+<ul>
+<li>
+<a href="http://stackoverflow.com/questions/494801/free-open-source-scrum-backlog-tool">stackoverflow Free/Open Source Scrum Backlog Tool</a>
+
+<li>
+<a href="http://www.userstories.com/products?rating_value=top_rated&amp;license_type%5B%5D=F&amp;commit=Filter">userStories</a>
+
+<li>
+<a href="http://agilescout.com/best-agile-scrum-tools/">which one is best</a>
+
+</ul>
+
         </div><!--/span-->
       </div><!--/row-->
 
