--- a/wiki_html/sshfs.html
+++ b/wiki_html/sshfs.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>%title%</title>
+    <title>sshfs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,8 +12,8 @@
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     -->
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap-responsive.min.css">
-    <link rel="Stylesheet" type="text/css" href="%root_path%css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -41,7 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="%root_path%index.html">Real's Notes</a>
+          <a class="brand" href="index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -60,7 +60,42 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span6">
-            %content%
+            
+<h1 id="toc_1">Install &amp; Update on Mac</h1>
+
+<p>
+Honebrew:
+</p>
+
+<p>
+  <code>brew install sshfs</code>
+</p>
+
+<p>
+In order for FUSE-based filesystems to work, the fuse4x kernel extension must be installed by the root user:
+</p>
+
+<pre>
+  sudo /bin/cp -rfX /usr/local/Cellar/fuse4x-kext/0.9.2/Library/Extensions/fuse4x.kext /Library/Extensions
+  sudo chmod +s /Library/Extensions/fuse4x.kext/Support/load_fuse4x
+</pre>
+
+<p>
+If upgrading from a previous version of Fuse4x, the old kernel extension will need to be unloaded before performing the steps listed above. First, check that no FUSE-based filesystems are running:
+</p>
+
+<p>
+  <code>mount -t fuse4x</code>
+</p>
+
+<p>
+Unmount all FUSE filesystems and then unload the kernel extension:
+</p>
+
+<p>
+  <code>sudo kextunload -b org.fuse4x.kext.fuse4x</code>
+</p>
+
         </div><!--/span-->
       </div><!--/row-->
 
