--- a/wiki_html/工程师的非技术素养.html
+++ b/wiki_html/工程师的非技术素养.html
@@ -8,7 +8,12 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <!--
     <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
+    -->
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
+    <link rel="Stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,7 +32,6 @@
         }
       }
     </style>
-    <link rel="Stylesheet" type="text/css" href="http://lib.sinaapp.com/js/bootstrap/latest/css/bootstrap-responsive.min.css">
     <script type="text/javascript"
         src="http://lib.sinaapp.com/js/jquery/1.9.0/jquery.min.js"></script>
   </head>
@@ -37,12 +41,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Real's Notes</a>
+          <a class="brand" href="index.html">Real's Notes</a>
           <div class="nav-collapse collapse">
             <!-- <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -54,49 +53,41 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
+        <div class="span3">
           <div class="well sidebar-nav">
             <ul id="sidebar" class="nav nav-list">
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <div class="span6">
             
 <ul>
 <li>
-清楚自己的职责。  
+清楚自己的职责
+<br />    大的方向上，我们是来解决问题的，是来做事儿的，不是来钩心斗角的。
 
 </ul>
-<blockquote>
-大的方向上，我们是来解决问题的，是来做事儿的，不是来钩心斗角的。
-</blockquote>
 
 <ul>
 <li>
-任何的决定都必须有事实根据。  
+任何的决定都必须有事实根据
+<br />    不能依靠假设、推测做决定。当处理故障时，你可以用假设来帮助查找故障原因，但是万万不可以用假设来处理故障。
 
 </ul>
-<blockquote>
-不能依靠假设、推测做决定。当处理故障时，你可以用假设来帮助查找故障原因，但是万万不可以用假设来处理故障。
-</blockquote>
 
 <ul>
 <li>
-注意思维同步。  
+注意思维同步
+<br />    与人沟通时，遇到没理解或者思路没有跟上的时候，一定要问清楚。如果你没有追问，反而自认为理解了别人的意思，即便你真的理解，但是这仍然很危险。交流的目标是思维的同步，任何共识都无法建立在揣测之上。当然这是针对沟通双方的。人们往往对自己的表达效果无意识。
 
 </ul>
-<blockquote>
-与人沟通时，遇到没理解或者思路没有跟上的时候，一定要问清楚。如果你没有追问，反而自认为理解了别人的意思，即便你真的理解，但是这仍然很危险。交流的目标是思维的同步，任何共识都无法建立在揣测之上。当然这是针对沟通双方的。人们往往对自己的表达效果无意识。
-</blockquote>
 
 <ul>
 <li>
-避免情绪化。  
+避免情绪化
+<br />    情绪化会让你不理智，从而做出错误的判断。如果你发现自己情绪出现波动，至少应该分析一下原因。有的时候，我们愤怒的原因只是别人没办法理解自己的意思，像个白痴一样说些不着边儿的话。这种情况我只能说双方都有问题。总之，情绪波动也应该波动的跟理性一点。经常，沟通双方都没有表达清楚，或者都没有理解对方的意思。最终在种种负面情绪的包夹下开始发火。这样的情况是可悲的，也是可笑的。
 
 </ul>
-<blockquote>
-情绪化会让你不理智，从而做出错误的判断。如果你发现自己情绪出现波动，至少应该分析一下原因。有的时候，我们愤怒的原因只是别人没办法理解自己的意思，像个白痴一样说些不着边儿的话。这种情况我只能说双方都有问题。总之，情绪波动也应该波动的跟理性一点。经常，沟通双方都没有表达清楚，或者都没有理解对方的意思。最终在种种负面情绪的包夹下开始发火。这样的情况是可悲的，也是可笑的。
-</blockquote>
 
         </div><!--/span-->
       </div><!--/row-->
@@ -108,9 +99,8 @@
 
     </div><!--/.fluid-container-->
 
-    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $(function(){
+        (function(){
             // put toc to sidebar.
             var li = $(".toc > ul > li"),
                 sidebar = $('#sidebar');
@@ -122,10 +112,14 @@
                 $('ul', sidebar).addClass("nav nav-list");
                 $(".toc").remove();
             }
-            $("a[href^='http://']").each(function(){
-              this.target = "_blank";
+            $("a[href^='http']").each(function(){
+              $(this).attr('target', '_blank').append('<i class="icon-share"><i>');
             });
-        });
+            $("table").addClass("table table-bordered");
+        })();
     </script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/?path=bootstrap/latest/js/bootstrap.min.js"></script>
+    <script
+        src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
   </body>
 </html>
